Make h-card image loading lazy, fix dark mode button padding

--- a/static/style.css
+++ b/static/style.css
@@ -109,6 +109,8 @@ blockquote {
     background: none;
     font-size: 30px;
     cursor: pointer;
+    padding: 0;
+    margin: 0;
 }
 
 .header-row {
